--- a/l3/adaptive.css
+++ b/l3/adaptive.css
@@ -1,23 +1,54 @@
 @media only screen and (max-width: 600px){
-    .container{
+    .container {
+        box-sizing: border-box;
+        display: grid;
         min-height: 100vh;
+        width: 100%;
+        grid-template-rows: 2fr 2fr 4fr 1fr 2fr;
+        grid-template-columns:
+                calc(75% - var(--bw)/2)
+                calc(25% - var(--bw)/2);
+        gap: var(--bw);
+        padding: var(--bw);
+        background-color: #000;
+    }
+    .it1{
+        grid-row: 1;
+        grid-column: 1/-1;
+    }
+    .it2{
+        grid-row: 2;
+        grid-column: 1;
+    }
+    .it3{
+        grid-row: 3;
+        grid-column: 1;
+    }
+    .it4{
+        grid-row: 2/-2;
+        grid-column: 2;
+    }
+    .it5{
+        grid-row: 4;
+        grid-column: 1;
+    }
+    .it6{
+        grid-row: 5;
+        grid-column: 1/-1;
     }
     .text-bigger{
-        font-size: 7vw;
+        font-size: 6vw;
     }
     *{
-        font-size: 4.5vw;
-    }
-    body{
-        width: 100vw;
+        font-size: 3vw;
     }
 }
 @media only screen and (max-width: 400px){
     .text-bigger{
-        font-size: 7.5vw;
+        font-size: 7vw;
     }
     *{
-        font-size: 5.5vw;
+        font-size: 4vw;
     }
 }
 @media only screen and (max-width: 250px){
