--- a/l3/adaptive.css
+++ b/l3/adaptive.css
@@ -36,7 +36,7 @@
         grid-row: 5;
         grid-column: 1/-1;
     }
-    .body{
+    body{
         min-width: 100%;
     }
     .text-bigger{
